# fix missing avatar images # materialize tour screen # make menu icons and text more visible # fix player card color , image and text # use single color for cards chosen

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -239,3 +239,8 @@ div.transbox p {
   right: 0 !important;
   transform: translateX(618px) translateY(611px) translateZ(0px) !important;
 }
+
+.cfh-header .material-icons,
+.cfh-header .mdl-navigation__link {
+  color: #000 !important;
+}
